<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sorting options: "/>

    <RadioGroup
        android:id="@+id/radioGroup_listSortingOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_listSortingOptions_creationOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_list_sort_creation_order"/>
        <RadioButton
            android:id="@+id/radioButton_listSortingOptions_VisitedOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_list_sort_visited_order"/>
        <RadioButton
            android:id="@+id/radioButton_listSortingOptions_AlphabetOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_list_sort_alphabet_order"/>

    </RadioGroup>

    <CheckBox
        android:id="@+id/chkBox_listSortingOptions_descending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkBox_list_sort_option_descending" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dialog_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dialog_confirm"
            />
        <Button
            android:id="@+id/button_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dialog_cancel"
            />

    </LinearLayout>
</LinearLayout>