<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_dialog_descr_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="4dp"
        android:text="@string/dialog_descr_txt_default_text2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="4dp"
        android:text="front:"/>

    <EditText
        android:id="@+id/editText_dialog_field1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="4dp"
        android:text="back:"/>

    <EditText
        android:id="@+id/editText_dialog_field2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="4dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dialog_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dialog_confirm"
            />
        <Button
            android:id="@+id/button_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dialog_cancel"
            />

    </LinearLayout>

</LinearLayout>