<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentDeckList"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:textSize="100dp"-->
<!--        android:text="@string/hello_blank_fragment" />-->

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView_deck_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add_item_to_decks_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_add_item_to_list"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_uiGroup_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="For collection:" />

        <Button
            android:id="@+id/button_decks_list_add_remove_existing_deck_for_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_deck_list_add_remove_existing_deck"/>

        <Button
            android:id="@+id/button_decks_list_collection_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_deck_list_collection_study"/>

    </LinearLayout>
</LinearLayout>